[package]
name = "solana-programs-sdk"
version = "1.0.0"
edition = "2024"
description = "Solana program IDs and PDA derivation helpers for 14 on-chain programs"
license = "MIT"
authors = ["Purple Squirrel Media LLC"]

[[bin]]
name = "pda"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
bs58 = "0.5"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
